# fancy-prompt

./: .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs  deny.toml
src/: args.rs  colors.rs  data.rs  main.rs  power.rs  prompt.rs  system_info.rs  verbose.rs
src/power/: mod.rs
src/power/sys/: linux.rs  macos.rs  mod.rs
src/sys/: mod.rs  unix.rs
src/vcs/: git.rs  mod.rs
