[package]
name = "fancy-prompt"
description = "fancy-prompt is an improved shell prompt with several useful features"
repository = "https://github.com/doy/fancy-prompt"
license = "MIT"
version = "0.2.0"
authors = ["Jesse Luehrs <doy@tozt.net>"]
exclude = ["screenshots/*"]
edition = "2021"

[badges]
travis-ci = { repository = "doy/fancy-prompt", branch = "master" }
is-it-maintained-issue-resolution = { repository = "doy/fancy-prompt" }
is-it-maintained-open-issues = { repository = "doy/fancy-prompt" }
maintenance = { status = "experimental" }

[dependencies]
clap = { version = "4.1", features = ["wrap_help", "cargo"] }
git2 = "0.16"
hostname = "0.3"
regex = "1.7"
term = "0.7"
terminal_size = "0.2.5"
time = { version = "0.3.20", features = ["local-offset", "formatting"] }
users = "0.11"
walkdir = "2.3"

[features]
verbose = []
